--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "crud-operation-react",
+  "homepage": "https://vipin9575.github.io/react-crud-operation",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,7 +9,9 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start-server": "json-server -w db.json -p 3000"
+    "start-server": "json-server -w db.json -p 3000",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -27,6 +30,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "gh-pages": "^6.2.0",
     "globals": "^15.11.0",
     "vite": "^5.4.10"
   },
